let's shift to a classic UL ish

--- a/about/index.html
+++ b/about/index.html
@@ -62,95 +62,73 @@
     <section class="about-timeline">
         <div class="container">
             <ul class="timeline-wrapper">
-                <div class="item">
-                    <div class="year">90</div>
-                    <div class="milestone">Born & raised in SE Idaho</div>
-                </div>
-                <div class="item">
-                    <div class="year">08</div>
-                    <div class="milestone">1<sup>st</sup> Gen College Student</div>
-                </div>
-                <div class="item">
-                    <div class="year">14</div>
-                    <div class="milestone">BFA Graphic Design</div>
-                </div>
-                <div class="item">
-                    <div class="year"></div>
-                    <div class="milestone">Designer & MWS.dev</div>
+                <li class="item">
+                    Born & raised in SE Idaho
+                </li>
+                <li class="item">
+                    1<sup>st</sup> Gen College Student
+                </li>
+                <li class="item">
+                    BFA Graphic Design
+                </li>
+                <li class="item">
+                    Designer & MWS.dev
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Website Design</div>
+                        Website Design
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Logo Design</div>
+                        Logo Design
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Print Design</div>
+                        Print Design
                     </div>
-                </div>
-                <div class="item">
-                    <div class="year">16</div>
-                    <div class="milestone">Promoted to Lead Designer</div>
+                </li>
+                <li class="item">
+                    Promoted to Lead Designer
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Front-end Development</div>
+                        Front-end Development
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Project Management</div>
+                        Project Management
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Sales & Support</div>
+                        Sales & Support
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Mentoring</div>
+                        Mentoring
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">SOP Documentation</div>
+                        SOP Documentation
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Launched 300+ Websites</div>
+                        Launched 300+ Websites
                     </div>
-                </div>
-                <div class="item">
-                    <div class="year">23</div>
+                </li>
+                <li class="item">
                     <div class="milestone">Got Married</div>
-                </div>
-                <div class="item">
-                    <div class="year">24</div>
+                </li>
+                <li class="item">
                     <div class="milestone">Became a Dad</div>
-                </div>
-                <div class="item">
-                    <div class="year">25</div>
+                </li>
+                <li class="item">
                     <div class="milestone">Became Board Member @ ARTI</div>
                     <div class="sub-item">
-                        <div class="year"></div>
                         <div class="milestone">Left MWS.dev</div>
                     </div>
                     <div class="sub-item">
-                        <div class="year"></div>
-                        <div class="milestone">Joined PersnicketySocials.com</div>
+                        Joined PersnicketySocials.com
                         <div class="sub-sub-item">
-                            <div class="year"></div>
-                            <div class="milestone">Creative & Brand Manager</div>
+                            Creative & Brand Manager
                         </div>
                         <div class="sub-item">
-                            <div class="year"></div>
-                            <div class="milestone">Website Specialist</div>
+                            Website Specialist
                         </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="year">26</div>
-                    <div class="milestone">Dad x2</div>
-                </div>
-            </div>
+                </li>
+                <li class="item">
+                    Dad x2
+                </li>
+            </ul>
         </div>
     </section>
 
