full ul li setup

--- a/about/index.html
+++ b/about/index.html
@@ -62,70 +62,80 @@
     <section class="about-timeline">
         <div class="container">
             <ul class="timeline-wrapper">
-                <li class="item">
+                <li>
                     Born & raised in SE Idaho
                 </li>
-                <li class="item">
+                <li>
                     1<sup>st</sup> Gen College Student
                 </li>
-                <li class="item">
+                <li>
                     BFA Graphic Design
                 </li>
-                <li class="item">
+                <li>
                     Designer & MWS.dev
-                    <div class="sub-item">
-                        Website Design
-                    </div>
-                    <div class="sub-item">
-                        Logo Design
-                    </div>
-                    <div class="sub-item">
-                        Print Design
-                    </div>
+                    <ul>
+                        <li>
+                            Website Design
+                        </li>
+                        <li>
+                            Logo Design
+                        </li>
+                        <li>
+                            Print Design
+                        </li>
+                    </ul>
                 </li>
-                <li class="item">
+                <li>
                     Promoted to Lead Designer
-                    <div class="sub-item">
-                        Front-end Development
-                    </div>
-                    <div class="sub-item">
-                        Project Management
-                    </div>
-                    <div class="sub-item">
-                        Sales & Support
-                    </div>
-                    <div class="sub-item">
-                        Mentoring
-                    </div>
-                    <div class="sub-item">
-                        SOP Documentation
-                    </div>
-                    <div class="sub-item">
-                        Launched 300+ Websites
-                    </div>
+                    <ul>
+                        <li>
+                            Front-end Development
+                        </li>
+                        <li>
+                            Project Management
+                        </li>
+                        <li>
+                            Sales & Support
+                        </li>
+                        <li>
+                            Mentoring
+                        </li>
+                        <li>
+                            SOP Documentation
+                        </li>
+                        <li>
+                            Launched 300+ Websites
+                        </li>
+                    </ul>
                 </li>
-                <li class="item">
-                    <div class="milestone">Got Married</div>
+                <li>
+                    Got Married
                 </li>
-                <li class="item">
-                    <div class="milestone">Became a Dad</div>
+                <li>
+                    Became a Dad
                 </li>
-                <li class="item">
-                    <div class="milestone">Became Board Member @ ARTI</div>
-                    <div class="sub-item">
-                        <div class="milestone">Left MWS.dev</div>
-                    </div>
-                    <div class="sub-item">
-                        Joined PersnicketySocials.com
-                        <div class="sub-sub-item">
-                            Creative & Brand Manager
+                <li>
+                    Became Board Member @ ARTI
+                    <ul>
+                        <li>
+                            Left MWS.dev
+                        </li>
+                        <li>
+                            Joined PersnicketySocials.com
+                            <ul>
+                                <li>
+                                    Creative & Brand Manager
+                                </li>
+                                <li>
+                                    Website Specialist
+                                </li>
+                            </ul>
+                            
                         </div>
-                        <div class="sub-item">
-                            Website Specialist
-                        </div>
-                    </div>
+                    </ul>
+                    
                 </li>
-                <li class="item">
+                <li>
                     Dad x2
                 </li>
             </ul>
