--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EN50WZM9ZP"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-EN50WZM9ZP');
@@ -17,156 +17,155 @@
     <title>About > Kyle Clay Richards</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/site.css">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-<main>
-    <header id="site-header">
-        <div class="container">
-            <div class="logo">
-                <a href="/">
-                    <img src="/images/KyleClayRichards_Logo_White.svg" />
-                </a>
+    <main>
+        <header id="site-header">
+            <div class="container">
+                <div class="logo">
+                    <a href="/">
+                        <img src="/images/KyleClayRichards_Logo_White.svg" />
+                    </a>
+                </div>
+                <nav class="main-nav">
+                    <ul>
+                        <li>
+                            <a href="/">Home</a>
+                        </li>
+                        <li>
+                            <a href="/about">About</a>
+                        </li>
+                        <li>
+                            <a href="services">Services</a>
+                        </li>
+                        <li>
+                            <a href="portfolio">Portfolio</a>
+                        </li>
+                    </ul>
+                    <div class="cta">
+                        <a href="/contact" class="btn">Contact</a>
+                    </div>
+                </nav>
             </div>
-            <nav class="main-nav">
-                <ul>
+        </header>
+        <section class="title-banner">
+            <div class="container">
+                <p class="secondary-heading">About Me</p>
+                <h1>Kyle Clay Richards</h1>
+            </div>
+        </section>
+        <section class="about-timeline">
+            <div class="container">
+                <ul class="timeline-wrapper">
                     <li>
-                        <a href="/">Home</a>
+                        Born & raised in SE Idaho
                     </li>
                     <li>
-                        <a href="/about">About</a>
+                        1<sup>st</sup> Gen College Student
                     </li>
                     <li>
-                        <a href="services">Services</a>
+                        BFA Graphic Design
                     </li>
                     <li>
-                        <a href="portfolio">Portfolio</a>
+                        Designer & MWS.dev
+                        <ul>
+                            <li>
+                                Website Design
+                            </li>
+                            <li>
+                                Logo Design
+                            </li>
+                            <li>
+                                Print Design
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Promoted to Lead Designer
+                        <ul>
+                            <li>
+                                Front-end Development
+                            </li>
+                            <li>
+                                Project Management
+                            </li>
+                            <li>
+                                Sales & Support
+                            </li>
+                            <li>
+                                Mentoring
+                            </li>
+                            <li>
+                                SOP Documentation
+                            </li>
+                            <li>
+                                Launched 300+ Websites
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Got Married
+                    </li>
+                    <li>
+                        Became a Dad
+                    </li>
+                    <li>
+                        Became Board Member @ ARTI
+                    </li>
+                    <li>
+                        Left MWS.dev
+                    </li>
+                    <li>Joined PersnicketySocials.com
+                        <ul>
+                            <li>
+                                Creative & Brand Manager
+                            </li>
+                            <li>
+                                Website Specialist
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Dad x2
                     </li>
                 </ul>
-                <div class="cta">
-                    <a href="/contact" class="btn">Contact</a>
-                </div>
-            </nav>
-        </div>
-    </header>
-    <section class="title-banner" >
-        <div class="container">
-            <p class="secondary-heading">About Me</p>
-            <h1>Kyle Clay Richards</h1>
-        </div>
-    </section>
-    <section class="about-timeline">
-        <div class="container">
-            <ul class="timeline-wrapper">
-                <li>
-                    Born & raised in SE Idaho
-                </li>
-                <li>
-                    1<sup>st</sup> Gen College Student
-                </li>
-                <li>
-                    BFA Graphic Design
-                </li>
-                <li>
-                    Designer & MWS.dev
-                    <ul>
-                        <li>
-                            Website Design
-                        </li>
-                        <li>
-                            Logo Design
-                        </li>
-                        <li>
-                            Print Design
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    Promoted to Lead Designer
-                    <ul>
-                        <li>
-                            Front-end Development
-                        </li>
-                        <li>
-                            Project Management
-                        </li>
-                        <li>
-                            Sales & Support
-                        </li>
-                        <li>
-                            Mentoring
-                        </li>
-                        <li>
-                            SOP Documentation
-                        </li>
-                        <li>
-                            Launched 300+ Websites
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    Got Married
-                </li>
-                <li>
-                    Became a Dad
-                </li>
-                <li>
-                    Became Board Member @ ARTI
-                    <ul>
-                        <li>
-                            Left MWS.dev
-                        </li>
-                        <li>
-                            Joined PersnicketySocials.com
-                            <ul>
-                                <li>
-                                    Creative & Brand Manager
-                                </li>
-                                <li>
-                                    Website Specialist
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    Dad x2
-                </li>
-            </ul>
-        </div>
-    </section>
+            </div>
+        </section>
 
-    <footer id="site-footer">
-        <div class="footer-logo">
-            <img src="/images/KyleClayRichards_Logo_White.svg" />
-        </div>
-        <div class="socials">
-            <ul>
-                <li>
-                    <a href="https://www.linkedin.com/in/kyleclaydotcom/" target="_blank">
-                        <i class="bi bi-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://dribbble.com/kyleclaydotcom" target="_blank">
-                        <i class="bi bi-dribbble"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/kyleclaydotcom" target="_blank">
-                        <i class="bi bi-github"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
-</main>
+        <footer id="site-footer">
+            <div class="footer-logo">
+                <img src="/images/KyleClayRichards_Logo_White.svg" />
+            </div>
+            <div class="socials">
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/kyleclaydotcom/" target="_blank">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://dribbble.com/kyleclaydotcom" target="_blank">
+                            <i class="bi bi-dribbble"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/kyleclaydotcom" target="_blank">
+                            <i class="bi bi-github"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </main>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
