--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
                         BFA Graphic Design
                     </li>
                     <li>
-                        Designer & MWS.dev
+                        Designer @ MWS.dev
                         <ul>
                             <li>
                                 Website Design
