made the x in x2 a subscript

--- a/about/index.html
+++ b/about/index.html
@@ -131,7 +131,7 @@
                         </ul>
                     </li>
                     <li>
-                        Dad x2
+                        Dad <sub>x</sub>2
                     </li>
                 </ul>
             </div>
