changed a label to simplify and fit it on mobile lol

--- a/about/index.html
+++ b/about/index.html
@@ -120,7 +120,7 @@
                     <li>
                         Left MWS.dev
                     </li>
-                    <li>Joined PersnicketySocials.com
+                    <li>Joined Persnickety
                         <ul>
                             <li>
                                 Creative & Brand Manager
