simplifying interior page banners

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
         </header>
         <section class="title-banner">
             <div class="container">
-                <p class="secondary-heading">About Me</p>
+                <p class="secondary-heading">/about</p>
                 <h1>Kyle Clay Richards</h1>
             </div>
         </section>
