created contact page, swapped content, brought over contact form from current home page

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About > Kyle Clay Richards</title>
+    <title>Contact > Kyle Clay Richards</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -53,88 +53,44 @@
             </div>
         </header>
         <section class="title-banner">
-            <div class="container">
-                <p class="secondary-heading">/about</p>
-                <h1>Kyle Clay Richards</h1>
+            <div class="container sm">
+                <p class="secondary-heading">/contact</p>
+                <h1>Get in Touch</h1>
+                <p>If you have any questions about a potential project, my processes, or pricing, please reach out. I'd love the opportunity to connect.</p>
             </div>
         </section>
-        <section class="about-timeline">
-            <div class="container">
-                <ul class="timeline-wrapper">
-                    <li>
-                        Born & raised in SE Idaho
-                    </li>
-                    <li>
-                        1<sup>st</sup> Gen College Student
-                    </li>
-                    <li>
-                        BFA Graphic Design
-                    </li>
-                    <li>
-                        Designer @ MWS.dev
-                        <ul>
-                            <li>
-                                Website Design
-                            </li>
-                            <li>
-                                Logo Design
-                            </li>
-                            <li>
-                                Print Design
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        Promoted to Lead Designer
-                        <ul>
-                            <li>
-                                Front-end Development
-                            </li>
-                            <li>
-                                Project Management
-                            </li>
-                            <li>
-                                Sales & Support
-                            </li>
-                            <li>
-                                Mentoring
-                            </li>
-                            <li>
-                                SOP Documentation
-                            </li>
-                            <li>
-                                Launched 300+ Websites
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        Got Married
-                    </li>
-                    <li>
-                        Became a Dad
-                    </li>
-                    <li>
-                        Became Board Member @ ARTI
-                    </li>
-                    <li>
-                        Left MWS.dev
-                    </li>
-                    <li>Joined Persnickety
-                        <ul>
-                            <li>
-                                Creative & Brand Manager
-                            </li>
-                            <li>
-                                Website Specialist
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- <li>
-                        Dad <sub>x</sub>2
-                    </li> -->
-                </ul>
-            </div>
-        </section>
+        <section class="contact-form" id="contact">
+        <div class="form-container">
+            <h2>Send me a messsage.</h2>
+            
+            <form action="https://submit-form.com/okL0fW3Bj" method="POST">
+                <div class="form-item">
+                    <label for="firstName">First Name</label>
+                    <input type="text" id="firstName" name="First Name" placeholder="" required="">
+                </div>
+                <div class="form-item">
+                    <label for="lastName">Last Name</label>
+                    <input type="lastName" id="lastName" name="Last Name" placeholder="" required="">
+                </div>
+                <div class="form-item">
+                    <label for="emailAddress">Email Address</label>
+                    <input type="email" id="emailAddress" name="Email Address" placeholder="" required="">
+                </div>
+                <div class="form-item">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="text" id="phoneNumber" name="Phone Number" placeholder="">
+                </div>
+                <div class="form-item">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="Message" placeholder="" required=""></textarea>
+                </div>
+                <div class="form-item">
+                    <div class="g-recaptcha" data-sitekey="6LdAiRssAAAAAFFN10M6q_ag412msetx7w85cqhG"></div>
+                    <button class="btn" type="submit">Send Message</button>
+                </div>
+            </form>
+        </div>
+    </section>
 
         <footer id="site-footer">
             <div class="footer-logo">
