--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
     </section>
 
     <section class="contact-form" id="contact">
-        <div class="form-container">
+        <div class="container sm">
             <h2>Send me a messsage.</h2>
-            <p>If you have any questions about a potential project, my processes, or pricing, please reach out. I'd love the opportunity to chat about how I can help.</p>
+            <p>If you have any questions about a potential project, my processes, or pricing, please reach out. I'd love the opportunity to connect.</p>
             <form action="https://submit-form.com/okL0fW3Bj" method="POST">
                 <div class="form-item">
                     <label for="firstName">First Name</label>
