fixing contact form container

--- a/contact/index.html
+++ b/contact/index.html
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="contact-form" id="contact">
-        <div class="form-container">
+        <div class="container sm">
             <h3>Send me a messsage.</h2>
             
             <form action="https://submit-form.com/okL0fW3Bj" method="POST">
