fixed a class name that was breaking the layout

--- a/services/index.html
+++ b/services/index.html
@@ -58,7 +58,7 @@
                 <h1>Kyle Clay Richards</h1>
             </div>
         </section>
-        <section class="services-timeline">
+        <section class="services">
             <div class="container">
                 <div class="component-inner">
                     <div class="item">
