added some style thingies

--- a/services/index.html
+++ b/services/index.html
@@ -65,21 +65,21 @@
                         <a href="/services/graphic-design">
                             <img src="/images/graphic-design-icon.svg" />
                             <h2>Graphic Design</h2>
-                            <p class="secondary-heading">Learn More >></p>
+                            <p class="secondary-heading">Learn More</p>
                         </a>
                     </div>
                     <div class="item">
                         <a href="/services/website-development">
                             <img src="/images/website-development-icon.svg" />
                             <h2>Website Deveopment</h2>
-                            <p class="secondary-heading">Learn More >></p>
+                            <p class="secondary-heading">Learn More</p>
                         </a>
                     </div>
                     <div class="item">
                         <a href="/services/digital-marketing">
                             <img src="/images/and-beyond-icon.svg" />
                             <h2>Digital Marketing</h2>
-                            <p class="secondary-heading">Learn More >></p>
+                            <p class="secondary-heading">Learn More</p>
                         </a>
                     </div>
                 </div>
