another typo sheesh

--- a/services/index.html
+++ b/services/index.html
@@ -71,7 +71,7 @@
                     <div class="item">
                         <a href="/services/website-development">
                             <img src="/images/website-development-icon.svg" />
-                            <h2>Website Deveopment</h2>
+                            <h2>Website Development</h2>
                             <p class="secondary-heading">Learn More</p>
                         </a>
                     </div>
