--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact > Kyle Clay Richards</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/site.css">
@@ -85,7 +86,7 @@
                     <textarea id="message" name="Message" placeholder="" required=""></textarea>
                 </div>
                 <div class="form-item">
-                    <div class="g-recaptcha" data-sitekey="6LdAiRssAAAAAFFN10M6q_ag412msetx7w85cqhG"></div>
+                    <div class="g-recaptcha" data-sitekey="6LdAiRssAAAAAFFN10M6q_ag412msetx7w85cqhG" data-action="SEND"></div>
                     <button class="btn" type="submit">Send Message</button>
                 </div>
             </form>
